--- a/Desktop/WPF/MainForm.xaml
+++ b/Desktop/WPF/MainForm.xaml
@@ -1,11 +1,16 @@
 ﻿<Window x:Class="Desktop.WPF.MainForm"
+             Name="mainWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              mc:Ignorable="d"
-             Title="TFSPeeker - A better way to peek into MTM Test Cases" Height="600" Width="900"
+             Title="TFSPeeker - A way to forget MTM" Height="600" Width="900"
+             WindowStyle="None"
+             AllowsTransparency="False"
+             Icon="../Resources/icon.png"
+             IsHitTestVisible="True" ResizeMode="NoResize"
 >
 
     <i:Interaction.Triggers>
@@ -15,22 +20,39 @@
     </i:Interaction.Triggers>
 
     <Window.Background>
-        <LinearGradientBrush EndPoint="0.504,1.5" StartPoint="0.504,0.03">
-            <GradientStop Color="LightSlateGray" Offset="0"/>
+        <LinearGradientBrush EndPoint="0.3,1" StartPoint="0.3,0.03">
+            <GradientStop Color="Black" Offset="0"/>
             <GradientStop Color="SlateGray" Offset="0.3"/>
-            <GradientStop Color="CornflowerBlue" Offset="0.6"/>
+            <GradientStop Color="Black" Offset="0.6"/>
         </LinearGradientBrush>
     </Window.Background>
 
     <Window.Resources>
+
+        <Style x:Key="gridViewColumnHeaderStyle" TargetType="{x:Type GridViewColumnHeader}">
+            <Setter Property="Background" Value="LightBlue" />
+            <Setter Property="Foreground" Value="Black" />
+            <Setter Property="FontWeight" Value="Bold" />
+        </Style>
+
+        <Style x:Key="listViewStyle" TargetType="{x:Type ListView}">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="DarkSlateGray"/>
+        </Style>
+
         <Style x:Key="labelStyle" TargetType="{x:Type Label}">
             <Setter Property="FontSize" Value="16" />
             <Setter Property="FontFamily" Value="Calibri" />
-            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="Medium"/>
         </Style>
 
         <Style x:Key="rounded" TargetType="{x:Type TextBox}">
-            <Setter Property="FontSize" Value="17"/>
+            <Setter Property="Background"  Value="DarkSlateGray"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Foreground" Value="White"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Style.Resources>
@@ -43,57 +65,77 @@
     </Window.Resources>
 
     <DockPanel Margin="5">
+        <StackPanel DockPanel.Dock="Top">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.1*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="0.4*"/>
+                </Grid.ColumnDefinitions>
+                <Image VerticalAlignment="Top" HorizontalAlignment="Left" Source="../Resources/icon.png" Width="25" Height="25"/>
+                <Label Grid.Row="0" Grid.Column="1" Background="Transparent" Foreground="White" Content="{Binding Title, ElementName=mainWindow}"/>
+                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" FlowDirection="LeftToRight" Grid.Row="0" Grid.Column="2">
+                    <Button FontWeight="ExtraBlack" BorderBrush="White" Background="LightBlue" Width="60" Content="-" Margin="5" Click="Button_Minimize" />
+                    <Button FontWeight="ExtraBlack" BorderBrush="White" Background="DarkRed" Width="60" Content="x" Margin="5" Command="{Binding Path=Close}"/>
+                </StackPanel>
+            </Grid>
+        </StackPanel>
         <Grid DockPanel.Dock="Top">
             <Grid.Resources>
                 <Style BasedOn="{StaticResource labelStyle}" TargetType="{x:Type Label}" />
                 <Style BasedOn="{StaticResource rounded}" TargetType="{x:Type TextBox}" />
             </Grid.Resources>
             <Grid.ColumnDefinitions>
-              <ColumnDefinition Width="0.5*"></ColumnDefinition>
-              <ColumnDefinition Width="1*"></ColumnDefinition>
-              <ColumnDefinition Width="0.7*"></ColumnDefinition>
-              <ColumnDefinition Width="1*"></ColumnDefinition>
-              <ColumnDefinition Width="0.7*"></ColumnDefinition>
-              <ColumnDefinition Width="1.5*"></ColumnDefinition>
-              <ColumnDefinition Width="2*"></ColumnDefinition>
-              <ColumnDefinition Width="1*"></ColumnDefinition>
-              <ColumnDefinition Width="0.3*"></ColumnDefinition>
+                <ColumnDefinition Width="0.5*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="0.7*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="0.7*"/>
+                <ColumnDefinition Width="1.5*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="0.3*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
-          
-            <Label Grid.Row="0" Grid.Column="0" Content="Suite:"/>
+
+            <Label Grid.Row="0" Grid.Column="0" Content="Suite:" HorizontalContentAlignment="Center"/>
             <TextBox Grid.Row="0" Grid.Column="1" Name="txtSuiteId" Text="{Binding SuiteId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <TextBox.InputBindings>
                     <KeyBinding Command="{Binding Path=ChangeSuite}" Key="Enter" />
                 </TextBox.InputBindings>
             </TextBox>
-                <Label Grid.Row="0" Grid.Column="2" Content="Plan ID:"/>
+            <Label Grid.Row="0" Grid.Column="2" Content="Plan ID:" HorizontalContentAlignment="Center"/>
             <TextBox Grid.Row="0" Grid.Column="3" Name="txtPlanId" Text="{Binding PlanId, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}">
                 <TextBox.InputBindings>
                     <KeyBinding Command="{Binding Path=ChangePlan}" Key="Enter" />
                 </TextBox.InputBindings>
             </TextBox>
-            <Label Grid.Row="0" Grid.Column="4" Content="Keyword:"/>
+            <Label Grid.Row="0" Grid.Column="4" Content="Keyword:" HorizontalContentAlignment="Center"/>
             <TextBox Grid.Row="0" Grid.Column="5" Name="txtKeyword" Text="{Binding Keyword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                 <TextBox.InputBindings>
                     <KeyBinding Command="{Binding Path=Filter}" Key="Enter" />
                 </TextBox.InputBindings>
             </TextBox>
-            <ComboBox Margin="5,0" Grid.Row="0" Grid.Column="6" Name="cbxViewType" ItemsSource="{Binding ViewTypes}" SelectedItem="{Binding CurrentViewType}" />
-            <Label Grid.Row="0" Grid.Column="7" Content="Auto-refresh:"/>
+            <StackPanel Grid.Row="0" Grid.Column="6" Margin="15,5,5,5">
+                <ComboBox Name="cbxViewType" ItemsSource="{Binding ViewTypes}" SelectedItem="{Binding CurrentViewType}" />
+            </StackPanel>
+            <Label Grid.Row="0" Grid.Column="7" Content="Auto-refresh:" HorizontalContentAlignment="Center"/>
             <CheckBox Grid.Row="0" Grid.Column="8" Name="chkbxRefresh" IsChecked="{Binding AutoRefresh}" VerticalAlignment="Center" HorizontalAlignment="Center" IsEnabled="false"/>
-
         </Grid>
-        <ListView ItemsSource="{Binding TestCases}" Foreground="Black" FontWeight="Bold" Background="CadetBlue" Margin="3" Name="lvTestCases" >
+        <ListView ItemsSource="{Binding TestCases}" Margin="3" Name="lvTestCases" >
             <ListView.Resources>
+                <Style BasedOn="{StaticResource listViewStyle}" TargetType="{x:Type ListView}" />
                 <Style TargetType="{x:Type ListViewItem}">
                     <EventSetter Event="MouseDoubleClick" Handler="HandleDoubleClick" />
                 </Style>
             </ListView.Resources>
             <ListView.View>
                 <GridView>
+                    <GridView.ColumnHeaderContainerStyle>
+                        <Style BasedOn="{StaticResource gridViewColumnHeaderStyle}" TargetType="{x:Type GridViewColumnHeader}"/>
+                    </GridView.ColumnHeaderContainerStyle>
                     <GridViewColumn Header="Id" Width="70" DisplayMemberBinding="{Binding Id}" />
                     <GridViewColumn Header="State" Width="70" DisplayMemberBinding="{Binding State}" />
                     <GridViewColumn Header="Title" Width="450" DisplayMemberBinding="{Binding Title}" />
