--- a/Desktop/WPF/MainForm.xaml
+++ b/Desktop/WPF/MainForm.xaml
@@ -4,22 +4,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              mc:Ignorable="d"
-             Title="TFSPeeker - A way to forget MTM" Height="720" Width="1080"
+             Title="TFSPeeker - A way to forget MTM (┛◉Д◉)┛彡┻━┻" Height="720" Width="1080"
              WindowStyle="None"
              AllowsTransparency="False"
              Icon="../Resources/icon.png"
              IsHitTestVisible="True" 
-             ResizeMode="NoResize"
->
-
-    <i:Interaction.Triggers>
-        <i:EventTrigger EventName="Closing">
-            <i:InvokeCommandAction Command="{Binding Close}"></i:InvokeCommandAction>
-        </i:EventTrigger>
-    </i:Interaction.Triggers>
-
+             ResizeMode="NoResize">
+    
     <Window.Background>
         <LinearGradientBrush EndPoint="0.3,1" StartPoint="0.3,0.03">
             <GradientStop Color="Black" Offset="0"/>
